--- a/css/base_sort.css
+++ b/css/base_sort.css
@@ -381,6 +381,13 @@ td {
     height: 40px;
 }
 
+@media only screen and (max-width: 1100px) {
+    .menu-btns button:last-child {
+    	border-top-right-radius: 10px;
+        border-right:none;
+    }
+}
+
 #code {
     overflow: hidden;
     white-space: pre-wrap;
