--- a/css/base_sort.css
+++ b/css/base_sort.css
@@ -276,9 +276,10 @@ body {
 }
 
 @media only screen and (max-width: 1100px) {
-	#change-container{
+     #change-container{
 	margin-right:25px;
-}
+	margin-top: 80px;
+     }
     .sort-table {
         font-size: 19px;
 	    margin-top: 10px;
