--- a/css/base_sort.css
+++ b/css/base_sort.css
@@ -278,6 +278,7 @@ body {
 @media only screen and (max-width: 1100px) {
      #change-container{
 	margin-top: 20px;
+	margin-right: 5px;
      }
     .sort-table {
         font-size: 19px;
