--- a/css/base.css
+++ b/css/base.css
@@ -109,6 +109,19 @@ margin:right:5px;
 
 /* APPLYING MEDIA QUERIES */
 
+@media (max-width: 920px){
+	.logo {
+		margin-left: 20px;
+	}
+	.menu li{
+		margin-right:0px;
+		margin-left: 0px;
+	}
+	.menu li:first-child{
+		margin-left: 20px;
+	}
+}
+
 @media (max-width: 768px) {
   .logo {
     margin-left: 20px;
